# hibi

./: .gitignore  .worktreeinclude  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  action.yml  biome.json  breakdown-hibi-prd-changes.html  lefthook.yml  package.json  release-please-config.json  trigger.txt  tsconfig.json
.claims/: config.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
design/: ADR-001-state-vocabulary.md  ADR-002-research-realignment.md  ADR-003-trust-hardening-and-workflow-alignment.md
docs/: PRD.md  PRD.md.bak  anchors.mdx  banners.mdx  behavioral.mdx  ci.mdx  claude-code.mdx  cli-reference.mdx  concepts.mdx  design.mdx  docs.json  index.mdx  lifecycle.mdx  quickstart.mdx  resolvers.mdx  sdks.mdx  verdicts.mdx  workflows.mdx
packaging/: claim-engine.rb  hibi.rb
resolvers/: semantic-advisor.ts
schemas/: Anchor.v1.json  Anchor.v2.json  Assertion.v1.json  Assertion.v2.json  BehaviorScope.v1.json  DescribeResult.v1.json  Document.v1.json  Document.v2.json  Edge.v1.json  Proposition.v1.json  Proposition.v2.json  Remediation.v1.json  RemediationAction.v2.json  ResolveParams.v1.json  ResolveParams.v2.json  ResolveResult.v1.json  ResolveResult.v2.json  RpcRequest.v1.json  RpcResponse.v2.json  Selector.v1.json  Selector.v2.json  SelectorBundle.v1.json  StoreConfig.v1.json  StoreConfig.v2.json  Verdict.v1.json  Verdict.v2.json  Verifier.v1.json  VerifyParams.v1.json  (+3 more)
sdk/rust/: Cargo.toml
sdk/rust/examples/: echo_resolver.rs
sdk/rust/src/: lib.rs
(+161 files in other folders)
