[package]
name = "claim-engine-resolver"
version = "0.1.0"
edition = "2021"
description = "Claim Engine — Rust resolver SDK (out-of-process JSONL-RPC over stdio)"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "claim_engine_resolver"
path = "src/lib.rs"

[[example]]
name = "echo_resolver"
path = "examples/echo_resolver.rs"
